chore:画板缩放、大小控制

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,13 @@
     "suppressImplicitAnyIndexErrors": true,
     // "noUnusedLocals": true,
     // "noUnusedParameters": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    },
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "example"]
