--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
+    "clsx": "^1.1.1",
     "react": "^16.0.0"
   },
   "devDependencies": {
@@ -49,6 +50,7 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.2.0",
+    "lerna": "^4.0.0",
     "microbundle-crl": "^0.13.11",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
@@ -59,5 +61,8 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "clsx": "^1.1.1"
+  }
 }
