--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
     // "noUnusedParameters": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
+    "types": [
+        "node"
+    ],
     "paths": {
       "@/*": [
         "./src/*"
@@ -24,5 +27,5 @@
     },
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "example"]
+  "exclude": ["node_modules", "dist", "example", "packages"]
 }
