chore:控制包npm位置

--- a/packages/react-draggable/package.json
+++ b/packages/react-draggable/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-draggable",
+  "name": "@pearone/react-draggable",
   "version": "0.0.1",
   "description": "> TODO: description",
   "author": "pearone",
@@ -35,5 +35,6 @@
   },
   "bugs": {
     "url": "https://github.com/pearone/react-drag-layout/issues"
-  }
+  },
+  "gitHead": "e715d363113587f8b5b776c13e60ae06bfbb1a51"
 }
