--- a/packages/react-draggable/package.json
+++ b/packages/react-draggable/package.json
@@ -13,6 +13,9 @@
   "files": [
     "lib"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@testing-library/jest-dom": "file:../../node_modules/@testing-library/jest-dom",
     "@testing-library/react": "file:../../node_modules/@testing-library/react",
@@ -36,5 +39,5 @@
   "bugs": {
     "url": "https://github.com/pearone/react-drag-layout/issues"
   },
-  "gitHead": "e715d363113587f8b5b776c13e60ae06bfbb1a51"
+  "gitHead": "3cc6fdd264aed92c69290b2fd3cc21f5e03e3bb2"
 }
