--- a/packages/event-utils/package.json
+++ b/packages/event-utils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pearone/event-utils",
   "version": "0.0.4",
-  "description": "> TODO: description",
+  "description": "通用方法",
   "author": "pearone",
   "homepage": "https://github.com/pearone/react-drag-layout#readme",
   "license": "ISC",
