--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^25.1.4",
+    "@types/lodash.isequal": "^4.5.5",
     "@types/node": "^12.12.38",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.7",
@@ -62,6 +63,7 @@
     "dist"
   ],
   "dependencies": {
-    "@pearone/event-utils": "^0.0.5"
+    "@pearone/event-utils": "^0.0.5",
+    "lodash.isequal": "^4.5.0"
   }
 }
