--- a/.eslintrc
+++ b/.eslintrc
@@ -1,29 +1,30 @@
 {
-  "parser": "@typescript-eslint/parser",
-  "extends": [
+    "parser": "@typescript-eslint/parser",
+    "extends": [
         "plugin:prettier/recommended",
         "prettier/standard",
         "prettier/react",
         "plugin:@typescript-eslint/eslint-recommended"
-  ],
-  "parserOptions": {
-    "ecmaVersion": 2020,
-    "ecmaFeatures": {
-      "legacyDecorators": true,
-      "jsx": true
+    ],
+    "parserOptions": {
+        "ecmaVersion": 2020,
+        "sourceType": "module", // Allows for the use of imports
+        "ecmaFeatures": {
+            "legacyDecorators": true,
+            "jsx": true
+        }
+    },
+    "settings": {
+        "react": {
+            "version": "16"
+        }
+    },
+    "rules": {
+        "space-before-function-paren": 0,
+        "react/prop-types": 0,
+        "react/jsx-handler-names": 0,
+        "react/jsx-fragments": 0,
+        "react/no-unused-prop-types": 0,
+        "import/export": 0
     }
-  },
-  "settings": {
-    "react": {
-      "version": "16"
-    }
-  },
-  "rules": {
-    "space-before-function-paren": 0,
-    "react/prop-types": 0,
-    "react/jsx-handler-names": 0,
-    "react/jsx-fragments": 0,
-    "react/no-unused-prop-types": 0,
-    "import/export": 0
-  }
 }
