--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "react": "^16.0.0"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
+        "@babel/plugin-proposal-optional-chaining": "^7.16.7",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
