feature:页面大小变化时，宽高自适应

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "types": [
-        "node"
+        "node",
+        "resize-observer-browser"
     ],
     "paths": {
       "@/*": [
