--- a/example/package.json
+++ b/example/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "react-drag-layout-example",
-  "homepage": ".",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "node ../node_modules/react-scripts/bin/react-scripts.js start",
-    "build": "node ../node_modules/react-scripts/bin/react-scripts.js build",
-    "test": "node ../node_modules/react-scripts/bin/react-scripts.js test",
-    "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject"
-  },
-  "dependencies": {
-    "@testing-library/jest-dom": "file:../node_modules/@testing-library/jest-dom",
-    "@testing-library/react": "file:../node_modules/@testing-library/react",
-    "@testing-library/user-event": "file:../node_modules/@testing-library/user-event",
-    "@types/jest": "file:../node_modules/@types/jest",
-    "@types/node": "file:../node_modules/@types/node",
-    "@types/react": "file:../node_modules/@types/react",
-    "@types/react-dom": "file:../node_modules/@types/react-dom",
-    "antd": "4.18.5",
-    "react": "file:../node_modules/react",
-    "react-dom": "file:../node_modules/react-dom",
-    "react-drag-layout": "file:..",
-    "react-scripts": "file:../node_modules/react-scripts",
-    "typescript": "file:../node_modules/typescript"
-  },
-  "devDependencies": {
-    "@babel/plugin-syntax-object-rest-spread": "^7.8.3"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "react-drag-layout-example",
+    "homepage": ".",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "node ../node_modules/react-scripts/bin/react-scripts.js start",
+        "build": "node ../node_modules/react-scripts/bin/react-scripts.js build",
+        "test": "node ../node_modules/react-scripts/bin/react-scripts.js test",
+        "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject"
+    },
+    "dependencies": {
+        "@testing-library/jest-dom": "file:../node_modules/@testing-library/jest-dom",
+        "@testing-library/react": "file:../node_modules/@testing-library/react",
+        "@testing-library/user-event": "file:../node_modules/@testing-library/user-event",
+        "@types/jest": "file:../node_modules/@types/jest",
+        "@types/node": "file:../node_modules/@types/node",
+        "@types/react": "file:../node_modules/@types/react",
+        "@types/react-dom": "file:../node_modules/@types/react-dom",
+        "antd": "4.18.5",
+        "react": "file:../node_modules/react",
+        "react-dom": "file:../node_modules/react-dom",
+        "react-drag-layout": "file:..",
+        "react-router-dom": "^6.2.1",
+        "react-scripts": "file:../node_modules/react-scripts",
+        "typescript": "^4.5.4"
+    },
+    "devDependencies": {
+        "@babel/plugin-syntax-object-rest-spread": "^7.8.3"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
