--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
         "prettier": "^2.0.4",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "react-scripts": "^3.4.1"
+        "react-scripts": "^3.4.1",
+        "typescript": "^3.9.10"
     },
     "files": [
         "dist"
