--- a/example/package.json
+++ b/example/package.json
@@ -4,20 +4,18 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "dev": "node ../node_modules/react-scripts/bin/react-scripts.js start",
-        "build": "node ../node_modules/react-scripts/bin/react-scripts.js build",
-        "test": "node ../node_modules/react-scripts/bin/react-scripts.js test",
-        "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject",
+        "dev": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
         "storybook": "start-storybook -p 6006 -s public",
         "build-storybook": "build-storybook -s public"
     },
     "dependencies": {
         "@storybook/react": "^6.4.19",
         "@storybook/testing-library": "^0.0.9",
-        "@testing-library/jest-dom": "file:../node_modules/@testing-library/jest-dom",
         "@testing-library/react": "file:../node_modules/@testing-library/react",
         "@testing-library/user-event": "file:../node_modules/@testing-library/user-event",
-        "@types/jest": "file:../node_modules/@types/jest",
         "@types/node": "file:../node_modules/@types/node",
         "@types/react": "file:../node_modules/@types/react",
         "@types/react-dom": "file:../node_modules/@types/react-dom",
@@ -26,7 +24,7 @@
         "react-dom": "file:../node_modules/react-dom",
         "react-layout": "file:..",
         "react-router-dom": "^6.2.1",
-        "react-scripts": "file:../node_modules/react-scripts",
+        "react-scripts": "^5.0.0",
         "typescript": "^4.5.4"
     },
     "devDependencies": {
