--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
     "version": "0.0.1",
     "description": "react drag layout",
     "author": "pearone stefan-hui",
+    "private": true,
+    "workspaces": [
+        "packages/*"
+    ],
     "homepage": "https://github.com/pearone/react-layout#readme",
     "license": "MIT",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/pearone/react-layout.git"
     },
-    "types": "dist/types/interfaces/index.d.ts",
+    "types": "dist/index.d.ts",
     "files": [
         "dist"
     ],
@@ -19,9 +23,10 @@
         ".": {
             "import": "./dist/index.es.js",
             "require": "./dist/index.umd.js"
-        }
+        },
+        "./index.css": "./dist/style.css"
     },
-    "style": "dist/style.css",
+    "style": "./dist/style.css",
     "source": "src/index.tsx",
     "engines": {
         "node": ">=12"
@@ -79,7 +84,9 @@
         "prettier": "^2.0.4",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-scripts": "^5.0.0",
         "ts-jest": "^27.1.3",
+        "ts-node": "^10.7.0",
         "typescript": "^3.9.10",
         "vite": "^2.8.6"
     },
