--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,7 @@
 {
   "compilerOptions": {
-    "allowJs": true,
-    "outDir": "dist",
-    "module": "esnext",
-    "lib": ["dom", "esnext"],
-    "moduleResolution": "node",
+    "target": "esnext",
     "jsx": "react",
-    "sourceMap": true,
-    "declaration": true,
-    "esModuleInterop": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
-    "allowSyntheticDefaultImports": true,
-    "emitDeclarationOnly": true,
-    "declarationDir": "./dist/types",
-    "baseUrl": ".",
     "types": [
         "jest",
         "node",
@@ -27,10 +9,33 @@
         // "resize-observer-browser"
     ],
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+        "@/*": [
+            "./src/*"
+        ]
     },
+    "outDir": "dist",
+    "module": "esnext",
+    "allowJs": true,
+    "declaration": true,
+    "baseUrl": ".",
+    "lib": ["DOM", "DOM.Iterable", "esnext"],
+    "moduleResolution": "node",
+    "declarationDir": "dist",
+    "sourceMap": true,
+    "esModuleInterop": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "allowSyntheticDefaultImports": true,
+    "emitDeclarationOnly": true,
+    "skipDefaultLibCheck": true,
+    "skipLibCheck": true,
+    // "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    // "isolatedModules": true,
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "example", "packages"]
