--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "main": "dist/index.umd.js",
     "module": "dist/index.es.js",
     "exports": {
+        "./package.json": "./package.json",
+        "./index.css": "./dist/style.css",
         ".": {
             "import": "./dist/index.es.js",
             "require": "./dist/index.umd.js"
-        },
-        "./index.css": "./dist/style.css"
+        }
     },
     "style": "./dist/style.css",
     "source": "src/index.tsx",
@@ -39,8 +40,8 @@
     },
     "scripts": {
         "dev": "tsc -w && vite build --watch",
-        "build": "run-s build:js build:ts",
-        "build:js": "vite build --emptyOutDir",
+        "build": "run-s build:ts build:js",
+        "build:js": "vite build",
         "build:ts": "tsc -p tsconfig.json",
         "microbundle_build": "microbundle-crl --no-compress --format modern,cjs",
         "microbundle_dev": "microbundle-crl watch --no-compress --format modern,cjs",
@@ -57,7 +58,6 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
-        "@types/jest": "^25.2.3",
         "@types/node": "^12.12.38",
         "@types/react": "^16.9.27",
         "@types/react-dom": "^16.9.7",
@@ -84,7 +84,7 @@
         "prettier": "^2.0.4",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "react-scripts": "^5.0.0",
+        "react-scripts": "^3.4.1",
         "ts-jest": "^27.1.3",
         "ts-node": "^10.7.0",
         "typescript": "^3.9.10",
