--- a/packages/react-layout/package.json
+++ b/packages/react-layout/package.json
@@ -4,7 +4,7 @@
     "author": "pearone stefan-hui",
     "version": "0.0.1",
     "license": "MIT",
-    "homepage": "https://github.com/pearone/react-layout#readme",
+    "homepage": "https://github.com/DPDFE/react-layout/tree/main/packages/react-layout",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/pearone/react-layout.git"
