--- a/.editorconfig
+++ b/.editorconfig
@@ -5,5 +5,14 @@ charset = utf-8
 indent_style = space
 indent_size = 4
 end_of_line = lf
+max_line_length = 100
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[*.{yml,yaml,json}]
+indent_style = space
+indent_size = 4
+
+[*.md]
+trim_trailing_whitespace = false
+
