--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,11 @@
 {
-    "singleQuote": true,
-    "jsxSingleQuote": true,
     "semi": true,
     "tabWidth": 4,
+    "printWidth": 100,
+    "singleQuote": true,
+    "jsxSingleQuote": true,
     "bracketSpacing": true,
     "jsxBracketSameLine": false,
     "arrowParens": "always",
-    "trailingComma": "none"
+    "trailingComma": "all"
 }
