--- a/packages/event/package.json
+++ b/packages/event/package.json
@@ -27,5 +27,6 @@
     },
     "bugs": {
         "url": "https://github.com/pearone/react-layout/issues"
-    }
+    },
+    "gitHead": "f8e70fcfcc54d09a52f5d5d1ead5a5a0f449136b"
 }
