--- a/packages/react-layout/package.json
+++ b/packages/react-layout/package.json
@@ -44,5 +44,6 @@
     "peerDependencies": {
         "react": ">=16.0.0",
         "react-dom": ">=16.0.0"
-    }
+    },
+    "gitHead": "f8e70fcfcc54d09a52f5d5d1ead5a5a0f449136b"
 }
