--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,5 @@
     "bracketSpacing": true,
     "jsxBracketSameLine": false,
     "arrowParens": "always",
-    "trailingComma": "all"
+    "trailingComma": "none"
 }
