--- a/package.json
+++ b/package.json
@@ -18,18 +18,14 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@storybook/addon-storysource": "^6.4.19",
+    "@testing-library/react": "^12.1.4",
     "antd": "^4.19.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-
+    "react-dom": "^17.0.2",
+    "storybook-addon-code-preview": "^0.0.9"
   },
   "devDependencies": {
-    "eslint": "^8.11.0",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.7.0",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
     "@babel/core": "^7.17.8",
     "@dpdfe/react-layout": "file:../pacakges/react-layout",
     "@storybook/addon-actions": "^6.5.0-alpha.49",
@@ -41,13 +37,19 @@
     "@types/jest": "^27.4.1",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
     "@vitejs/plugin-react": "^1.0.7",
     "babel-loader": "^8.2.3",
+    "eslint": "^8.11.0",
+    "jest": "^27.5.1",
     "lerna": "^4.0.0",
     "less": "^4.1.2",
     "npm-run-all": "^4.1.5",
     "react-router-dom": "^6.2.2",
     "storybook-builder-vite": "^0.1.21",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.7.0",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   }
