--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -9,7 +9,7 @@ build-and-deploy:
 runs-on: ubuntu-latest
 steps:
 - name: Checkout
-uses: actions/checkout@v2.3.1
+uses: actions/checkout@v1
 
 - name: Install and Build
 run: |
@@ -17,7 +17,7 @@ npm ci
 npm run build-storybook
 
 - name: Deploy
-uses: JamesIves/github-pages-deploy-action@3.6.2
+uses: JamesIves/github-pages-deploy-action@v4.2.5
 with:
 branch: gh-pages
 folder: storybook-static
