--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "build-storybook": "build-storybook"
     },
     "dependencies": {
+        "@jamesives/github-pages-deploy-action": "^4.2.5",
         "@storybook/addon-storysource": "^6.4.19",
         "@testing-library/react": "^12.1.4",
         "antd": "^4.19.2",
