--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
 version: '3.8'
 services:
-  node:
+  example:
     build:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - ./app:/app
-    command: sh -c "cd react-layout && npm run dev"
+      - .:/app
+    command: sh -c "npm rebuild esbuild && yarn dev"
     ports:
       - "3000:3000"
     stdin_open: true
+    environment:
+      - CHOKIDAR_USEPOLLING=true
