--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "postinstall": "run-s build:event build:layout",
         "dev": "run-p dev:example dev:layout",
         "dev:example": "vite",
+        "build": "vite build",
         "dev:layout": "lerna exec --scope @dpdfe/react-layout yarn dev",
         "dev:event": "lerna exec --scope @dpdfe/event-utils yarn dev",
         "build:layout": "lerna exec --scope @dpdfe/react-layout yarn build",
