--- a/packages/react-layout/package.json
+++ b/packages/react-layout/package.json
@@ -2,7 +2,7 @@
     "name": "@dpdfe/react-layout",
     "description": "react layout",
     "author": "pearone stefan-hui",
-    "version": "0.0.19",
+    "version": "0.0.20",
     "license": "MIT",
     "homepage": "https://github.com/DPDFE/react-layout/tree/main/packages/react-layout",
     "repository": {
@@ -33,7 +33,7 @@
         "dev": "run-p watch:ts watch:js",
         "watch:ts": "tsc -w",
         "watch:js": "vite build --watch",
-        "prepublish": " npm version patch"
+        "patch": " npm version patch"
     },
     "dependencies": {
         "@dpdfe/event-utils": "^0.0.7",
