--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@typescript-eslint/parser": "^5.15.0",
         "@vitejs/plugin-react": "^1.0.7",
         "babel-loader": "^8.2.3",
+        "echarts": "^5.3.2",
         "eslint": "^8.11.0",
         "gh-pages": "^3.2.3",
         "jest": "^27.5.1",
