--- a/packages/react-layout/package.json
+++ b/packages/react-layout/package.json
@@ -40,6 +40,7 @@
         "@dpdfe/event-utils": "^0.0.7",
         "@types/lodash.isequal": "^4.5.5",
         "@types/resize-observer-browser": "^0.1.7",
+        "ahooks": "^3.3.12",
         "classnames": "^2.3.1",
         "lodash.isequal": "^4.5.0",
         "resize-observer-polyfill": "^1.5.1"
