--- a/package.json
+++ b/package.json
@@ -25,22 +25,24 @@
         "@storybook/addon-storysource": "^6.4.19",
         "@testing-library/react": "^12.1.4",
         "antd": "^4.19.2",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
         "storybook-addon-code-preview": "^0.0.9"
     },
     "devDependencies": {
         "@babel/core": "^7.17.8",
         "@dpdfe/react-layout": "link:./packages/react-layout",
+        "@nrwl/nx-cloud": "latest",
         "@storybook/addon-actions": "^6.5.0-alpha.49",
         "@storybook/addon-essentials": "^6.5.0-alpha.49",
         "@storybook/addon-interactions": "^6.5.0-alpha.49",
         "@storybook/addon-links": "^6.5.0-alpha.49",
+        "@storybook/client-api": "^6.5.9",
         "@storybook/react": "^6.5.0-alpha.49",
         "@storybook/testing-library": "^0.0.9",
         "@types/jest": "^27.4.1",
         "@types/react": "^17.0.33",
-        "@types/react-dom": "^17.0.10",
+        "@types/react-dom": "^18.0.6",
         "@typescript-eslint/eslint-plugin": "^5.15.0",
         "@typescript-eslint/parser": "^5.15.0",
         "@vitejs/plugin-react": "^1.0.7",
@@ -52,13 +54,12 @@
         "lerna": "^4.0.0",
         "less": "^4.1.2",
         "npm-run-all": "^4.1.5",
+        "nx": "14.0.3",
         "react-router-dom": "^6.2.2",
         "storybook-builder-vite": "^0.1.21",
         "ts-jest": "^27.1.3",
         "ts-node": "^10.7.0",
         "typescript": "^4.5.4",
-        "vite": "^2.8.0",
-        "nx": "14.0.3",
-        "@nrwl/nx-cloud": "latest"
+        "vite": "^2.8.0"
     }
 }
