--- a/packages/react-layout/tsconfig.json
+++ b/packages/react-layout/tsconfig.json
@@ -28,6 +28,7 @@
             "@/*": ["./src/*"]
         }
     },
+    "compileOnSave": true,
     "include": ["src"],
-    "exclude": ["node_modules", "dist", "coverage"],
+    "exclude": ["node_modules", "dist", "coverage"]
 }
