--- a/packages/react-layout/package.json
+++ b/packages/react-layout/package.json
@@ -2,7 +2,9 @@
     "name": "@dpdfe/react-layout",
     "description": "react layout",
     "author": "pearone stefan-hui",
-    "version": "1.0.1",
+    "version": "0.0.64",
+    "dev_version": "0.0.64",
+    "online_version": "1.0.1",
     "license": "MIT",
     "homepage": "https://github.com/DPDFE/react-layout/tree/main/packages/react-layout",
     "repository": {
