--- a/packages/event/package.json
+++ b/packages/event/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@dpdfe/event-utils",
-    "version": "0.0.30",
+    "version": "0.0.32",
     "description": "通用方法",
     "author": "pearone",
     "homepage": "https://github.com/DPDFE/react-layout/tree/main/packages/event",
@@ -24,7 +24,7 @@
         "dev": "tsc -w",
         "build": "rm -rf dist && tsc --build",
         "test": "jest",
-        "test:single": "jest ./__tests__/community/epoll_queue.test.ts",
+        "test:single": "jest ./__tests__/dag.test.ts",
         "prepublishOnly": "npm run build"
     },
     "bugs": {
